--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 spring.application.name=visitor-report
+
+server.port=8081
+
+# Database
+spring.datasource.url=jdbc:mysql://172.17.0.2:3306/visitor_report_db
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+
+# Swagger
+springdoc.swagger-ui.operationsSorter=method
+
+# Rabbitmq
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=root
+spring.rabbitmq.password=root
+spring.rabbitmq.listener.simple.legacy-serialization.allowed-classes=com.example.visitor_report.dto.EventDto,com.example.visitor_ms.domain.dto.VisitorDto,com.example.visitor_ms.domain.dto.CompanyDto
